[package]
name = "toyudp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bytes = "1.3.0"
futures = { version = "0.3.25", features = ["thread-pool"] }
hex-literal = "0.3.4"
hkdf = "0.12.3"
rand = "0.8.5"
serde = "1.0.148"
serde_json = "1.0.89"
sha2 = "0.10.6"
time = "0.3.17"
tokio = { version = "1.22.0", features = ["full"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["full"] }
